apps/traefik/javelin/resources/dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.javelin.wesl.io`)
      services:
        - kind: TraefikService
          name: api@internal
